add header authentication
